# rk3506-lvgl-app

./: CMakeLists.txt  README.md  main.cpp  main.h
.cache/clangd/index/: AppBridge.cpp.9D3DC7CF64D1264D.idx  AppBridge.h.D9199EEF052C6683.idx  AppConfig.h.B8EB054E9EF11BD2.idx  AudioDevice.cpp.94384364FDCA2C56.idx  AudioDevice.h.169C845F2BF47D98.idx  Backlight.cpp.650E782B901FFF09.idx  Backlight.h.B8D07785541CBC00.idx  Dht11.cpp.4ED75D2C6EE169DF.idx  Dht11.h.66130C22DA5ED509.idx  FontManager.c.455F0F679644E14C.idx  FontManager.h.B5C0EE5DC1B8B178.idx  MPU6050.cpp.F813AB94B869A3C3.idx  MPU6050.h.1CA49D1C8D4B095F.idx  MediaDecoder.cpp.8F87651854970EF8.idx  MediaDecoder.h.AF0CA49C8720E5C1.idx  Mpu6050.cpp.61F3EC2B22B26D4B.idx  Mpu6050.h.965FF71628837A26.idx  MqttService.cpp.4F97D2DCE7E4F9AD.idx  MusicPlayer.cpp.1E505CEE601ACA3F.idx  MusicPlayer.h.69D155D87C306578.idx  WeatherService.cpp.6C81BE1E55E3B798.idx  WeatherService.h.7B67DE5C44DB43AD.idx  _CPU2_alpha_100x100.c.D43C0994E7C50EF4.idx  _alarm_alpha_80x80.c.C35088D1422CC719.idx  _bizhi_alpha_320x320.c.DBB2744C54152DB8.idx  _bizhi_alpha_854x480.c.8286566FEA10658E.idx  _camera_120x120.c.F9B5388516ACC318.idx  _cpu_120x120.c.319CF29F417BA3F9.idx  _img_120x120.c.DCF9D67DE7704B9B.idx  _img_alpha_100x100.c.C5A7D9F2FE9A5B85.idx  _led_alpha_20x20.c.712C5FA4280D831B.idx  _led_alpha_80x80.c.F229738C4B979D1E.idx  _list2_alpha_70x70.c.A7A34E22FAAA69ED.idx  _location_alpha_50x50.c.1B4DCF72F8AE5134.idx  _music_120x120.c.B8A43A54F5B10571.idx  _music_icon_alpha_15x15.c.BB3C7A6F88D7E725.idx  _next_alpha_70x70.c.D39AE02A71BA538A.idx  _off_alpha_70x70.c.9D3C8FEE2B15AF29.idx  _pause_alpha_70x70.c.8F618171E5E40E55.idx  _photograph_alpha_100x100.c.57C857CC2DD9545F.idx  (+76 more)
src/: AppConfig.h
src/bridge/: AppBridge.cpp  AppBridge.h  app_bridge.cpp  app_bridge.h
src/fonts/: FontManager.c  FontManager.h  fonts.c  fonts.h  qweather_icons.h
src/hal/: AudioDevice.cpp  AudioDevice.h  Backlight.cpp  Backlight.h  Buzzer.cpp  Buzzer.h  Dht11.cpp  Dht11.h  Led.cpp  Led.h  MediaDecoder.cpp  MediaDecoder.h  Mpu6050.cpp  Mpu6050.h
src/service/: DeviceService.cpp  DeviceService.h  MqttService.cpp  MqttService.h  MusicPlayer.cpp  MusicPlayer.h  WeatherService.cpp  WeatherService.h
ui/custom/: custom.c  custom.h  lv_zh_keyboard.c  lv_zh_keyboard.h
